Uso de enrutamiento nativo angular

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,6 +20,13 @@
     font-weight: bold;
 }
 
+.active {
+    
+    background:silver;
+    
+}
+
+
 .green {
     border-bottom: 10px solid greenyellow;
 }
