--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -304,6 +304,8 @@
   }
 </style>
 
+
+
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   <img
@@ -327,6 +329,7 @@
     </a>
 </div>
 
+
 <div class="content" role="main">
 
   <!-- Highlight Card -->
@@ -349,6 +352,16 @@
     </svg>
 
   </div>
+
+
+  <app-encabezado></app-encabezado>
+
+  <router-outlet></router-outlet>
+
+  <h1>Rutas de componentes - Indexación</h1>
+
+<hr>
+<hr>
 
 <h1>Listas</h1>
 <ul>
